componenti base e infromazioni create

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,13 @@
          <div id="carusel" style="width: 100%; margin: 0; padding: 0;"></div>
        
       </div>
+      <div id="informazioni" class="page">
+  <div id="newsPage"></div>
+      </div>
 </div>
+    </div>
+
+
       <div id="endpage" ></div>
 
 
